Nano-optimization of int->Integer conversion.  FindBugs.